<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ELSNew</groupId>
  <artifactId>RegUpdate</artifactId>
  <version>0.0.1-SNAPSHOT</version>
    <build>
<plugins>  
<plugin> 
<groupId>org.apache.maven.plugins</groupId> 
<artifactId>maven-compiler-plugin</artifactId> 
<!--java8 -->
<version>3.8.0</version> 
<configuration> 
<source>1.8</source>
<target>1.8</target> 

<!--java17 
<version>3.8.1</version> 
<configuration> 
<source>17</source>
<target>17</target>  -->
</configuration> 
</plugin>     
<plugin> 

<groupId>org.apache.maven.plugins</groupId> 
<artifactId>maven-surefire-plugin</artifactId> 

<version>3.0.0-M5</version> 
<configuration> 
<arguements> <argument>${env}</argument> 
</arguements> 
<properties> 
<property>
<name>usedefaultlisteners</name>
<value>false</value>
</property>
<!-- Setting ReportNG listeners --> 
<property> <name>listener</name>   
<value>org.uncommons.reportng.HTMLReporter, org.uncommons.reportng.JUnitXMLReporter</value> 
</property> 
</properties> <suiteXmlFiles>         
<suiteXmlFile>testng.xml</suiteXmlFile>      
</suiteXmlFiles> 

<forkCount>1</forkCount>
        <reuseForks>false</reuseForks>
<reportsDirectory>${project.basedir}/target/</reportsDirectory>


</configuration>     

<dependencies>
                <dependency>
                    <groupId>com.google.code.findbugs</groupId>
                    <artifactId>jsr305</artifactId>
                    <version>3.0.2</version>
                </dependency>
            </dependencies>  
            
</plugin>     
</plugins>
</build>
  
 
  <packaging>jar</packaging>

  <name>RegUpdate</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
    <!-- Core selenium jars -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.141.59</version>
        </dependency>
        
        <dependency>
    <groupId>org.seleniumhq.selenium</groupId>
    <artifactId>selenium-support</artifactId>
    <version>3.141.59</version>
</dependency>

        <!-- Firefox driver jar -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-firefox-driver</artifactId>
            <version>3.141.59</version>
        </dependency>
        
         <dependency>
        <groupId>org.seleniumhq.selenium</groupId>
        <artifactId>htmlunit-driver</artifactId>
        <version>2.44.0</version>
   		 </dependency> 

        <!-- Selenium IE driver -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-ie-driver</artifactId>
            <version>3.141.59</version>
        </dependency>

        <!-- Selenium Chrome driver -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-chrome-driver</artifactId>
           <!--  <version>3.141.59</version> -->
             <version>3.141.59</version>
        </dependency>

        <!-- TestNG dependency configuration -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.8.3</version>
            <scope>test</scope>
        </dependency>

        <!-- XML apis -->
        <dependency>
            <groupId>xml-apis</groupId>
            <artifactId>xml-apis</artifactId>
            <version>2.0.2</version>
        </dependency>

        <!-- My SQL java connector -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.22</version>
        </dependency>

        <!-- POI for excel -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>4.1.2</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>4.1.2</version>
            <type>jar</type>
        </dependency>

        <!-- DOM api -->
        <dependency>
            <groupId>org.axsl.org.w3c.dom.svg</groupId>
            <artifactId>svg-dom-java</artifactId>
            <version>1.1</version>
        </dependency>
        
        <!--Log4j -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
			<exclusions>
				<exclusion>
					<groupId>javax.mail</groupId>
					<artifactId>mail</artifactId>
				</exclusion>
				<exclusion>
					<groupId>javax.jms</groupId>
					<artifactId>jms</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sun.jdmk</groupId>
					<artifactId>jmxtools</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.sun.jmx</groupId>
					<artifactId>jmxri</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
	<dependency> 
	<groupId>org.uncommons</groupId>
	 <artifactId>reportng</artifactId> 
	 <version>1.1.4</version> 
	 <scope>test</scope>
	  <exclusions> 
	  <exclusion> 
	  <groupId>org.testng</groupId> 
	  <artifactId>testng</artifactId> 
	  </exclusion> </exclusions> 
	  </dependency> 
	  
	  <dependency> 
	  <groupId>com.google.inject</groupId> 
	  <artifactId>guice</artifactId> 
	  <version>4.2.3</version>   
	   </dependency>    
	   
	   <dependency>
    <groupId>com.google.guava</groupId>
    <artifactId>guava</artifactId>
    <version>30.0-jre</version>
</dependency>

<dependency>
  <groupId>org.slf4j</groupId>
  <artifactId>slf4j-simple</artifactId>
  <version>1.7.21</version>
</dependency>
	
    
      </dependencies>
  
</project>
